--- a/javaSrc/.classpath
+++ b/javaSrc/.classpath
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="/Users/josh/Documents/Work/Repository/AA/AAAsignment1/javaSrc/jopt-simple-5.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/josh/Documents/Work/Repository/AA/AAAsignment1/javaSrc/sample.jar"/>
 	<classpathentry kind="output" path=""/>
 </classpath>
